2003-10-06  Dave Brolley  <brolley@redhat.com>

	* frv.h (EF_FRV_CPU_FR550): New macro.

2003-09-30  Chris Demetriou  <cgd@broadcom.com>

	* mips.h (E_MIPS_ARCH_64R2): New define.

2003-09-23  DJ Delorie  <dj@redhat.com>

	* sh.h (R_SH_SWITCH8, R_SH_GNU_VTINHERIT, R_SH_GNU_VTENTRY,
	R_SH_LOOP_START,R_SH_LOOP_END): Move to "reserved" spaces.
	(R_SH_DIR16, R_SH_DIR8, R_SH_DIR8UL, R_SH_DIR8UW, R_SH_DIR8U,
	R_SH_DIR8SW, R_SH_DIR8S, R_SH_DIR4UL, R_SH_DIR4UW, R_SH_DIR4U,
	R_SH_PSHA, R_SH_PSHL): New.

2003-09-11  James Cownie <jcownie@etnus.com>

	* dwarf2.h: Add HP dwarf extensions from their hacked gdb
	header files (ftp://ftp.hp.com/pub/lang/tools/WDB/wdb-4.0.tar.gz).

2003-09-04  Nick Clifton  <nickc@redhat.com>

	* v850.h (E_V850E1_ARCH): Define.

2003-08-21  James Cownie <jcownie@etnus.com>

	* dwarf2.h: Add PGI dwarf extensions.
	
2003-08-08 Dmitry Diky <diwil@mail.ru>
	
	* msp430.h: Add xW42 and xE42 parts. Sort MPU list according to
	gcc order.

2003-08-07  Alan Modra  <amodra@bigpond.net.au>

	* reloc-macros.h (START_RELOC_NUMBERS) : Remove PARAMS macro.  Use
	C90 function definition.  Formatting.
	(RELOC_NUMBER): Remove !__STDC__ code.

2003-07-28  Eric Christopher  <echristo@redhat.com>

	* ppc.h (R_PPC_RELAX32): New. Fake relocation.

2003-07-25  H.J. Lu  <hongjiu.lu@intel.com>

	* v850.h (SHF_V850_GPREL): New.
	(SHF_V850_EPREL): Likewise.
	(SHF_V850_R0REL): Likewise.

2003-07-09  Alexandre Oliva  <aoliva@redhat.com>

	2001-05-16  Alexandre Oliva  <aoliva@redhat.com>
	* mn10300.h: Introduce GOTPC16, GOTOFF24, GOTOFF16 and
	PLT16, and rename GOTPC to GOTPC32 and GOTOFF to GOTOFF32.
	Renumbered all relocs.
	2001-04-12  Alexandre Oliva  <aoliva@redhat.com>
	* mn10300.h (R_MN10300_GOTPC, R_MN10300_GOTOFF,
	R_MN10300_PLT32, R_MN10300_GOT32, R_MN10300_GOT24,
	R_MN10300_GOT16, R_MN10300_COPY, R_MN10300_GLOB_DAT,
	R_MN10300_JMP_SLOT, R_MN10300_RELATIVE): New relocs.

2003-07-09  Alexandre Oliva  <aoliva@redhat.com>

	2000-04-01  Alexandre Oliva  <aoliva@cygnus.com>